# football-analytics

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  OPEN_QUESTIONS.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  restructure.sh
.claude/: settings.json
analyses/corners_euro_2024/: 01_data_exploration.ipynb  02_freeze_frame_features.ipynb
analyses/practice_questions/: index.md
analyses/q01_pressing_effectiveness/: writeup.md
analyses/q03_xg_vs_conversion_rate/: writeup.md
analyses/q04_pressing_intensity_game_state/: writeup.md
analyses/q05_press_resistance/: notebook.ipynb  writeup.md
analyses/q06_progressive_carrying/: writeup.md
analyses/q08_pass_completion_under_pressure/: writeup.md
analyses/q09_progressive_pass_volume/: writeup.md
analyses/q10_team_transition_player_metrics/: notebook.ipynb
analyses/q12_defensive_contribution_possession_shift/: notebook.ipynb  writeup.md
analyses/q13_set_piece_analysis/: notebook.ipynb
analyses/q14_xg_from_transitions/: notebook.ipynb  writeup.md
analyses/q15_crossing_analysis/: writeup.md
analyses/q16_defensive_systems_central_shots/: notebook.ipynb  writeup.md
analyses/q18_pressing_causation/: notebook.ipynb
analyses/q25_league_xg_structural_differences/: writeup.md
analyses/statsbomb/: extract_shots.ipynb
curriculum/phase_1_tactical_vocabulary/: SYLLABUS.md
data/: README.md
docs/: tooling.md
phase_1_tactical_vocabulary/: notes.md
question_bank/: question_bank.md
research/: open_questions.md
scripts/: check_docs.sh
src/footballd3/: README.md  (+2 more)
(+124 files in other folders)
