[project]
name = "football-analytics"
version = "0.1.0"
description = "Football analytics work — literature notes, analyses, and research."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "statsbombpy>=1.14.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "mplsoccer>=1.4",
    "jupyter>=1.0",
]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "nbstripout>=0.7",
]

[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["football_analytics"]

[tool.interrogate]
fail-under = 100
ignore-private = true
ignore-magic = true
ignore-nested-functions = true
ignore-init-method = true
ignore-init-module = false   # flip to true to stop requiring __init__.py docstrings